# lab03

./: CMakeLists.txt  README.md
_build/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
_build/formatter_ex_lib/: Makefile  cmake_install.cmake
_build/formatter_lib/: Makefile  cmake_install.cmake
_build/hello_world/: Makefile  cmake_install.cmake  hello_world
formatter_ex_lib/: CMakeLists.txt
formatter_ex_lib/include/: formatter_ex.h
formatter_ex_lib/sources/: formatter_ex.cpp
