cmake_minimum_required(VERSION 3.4)
project(formatter_ex)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_library(formatter_ex STATIC sources/formatter_ex.cpp)
target_include_directories(formatter_ex PUBLIC include)
target_link_libraries(formatter_ex PUBLIC formatter)
install(TARGETS formatter_ex ARCHIVE DESTINATION lib LIBRARY DESTINATION lib)
